src/objects/EMPLOYEE__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>FLOOR((TODAY() -  Date_of_Birth__c )/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_CTC__c</fullName>
        <label>Annual CTC</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Picklist dependent on State i.e. if Maharashtra is selected as the State only Mumbai and Pune show up in the City picklist</description>
        <label>City</label>
        <picklist>
            <controllingField>State__c</controllingField>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guntur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhopal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gandhi Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DEPARTMENT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DEPARTMENT</label>
        <referenceTo>DEPARTMENT__c</referenceTo>
        <relationshipLabel>EMPLOYEES</relationshipLabel>
        <relationshipName>EMPLOYEES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Joining__c</fullName>
        <label>Date of Joining</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B Tech.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B Sc</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <displayFormat>EMP-{000000}</displayFormat>
        <label>Employee ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Mandatory</description>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>First_Name__c  &amp;  Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_On_Notice_Period1__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is On Notice Period1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Mandatory</description>
        <label>Last Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Working_Day__c</fullName>
        <formula>Resignation_Date__c  + 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Working Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>EMPLOYEE__c</referenceTo>
        <relationshipLabel>EMPLOYEES</relationshipLabel>
        <relationshipName>EMPLOYEES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager_email__c</fullName>
        <label>Manager_email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Resignation_Date__c</fullName>
        <inlineHelpText>Enter the date if Notice Period checked to true</inlineHelpText>
        <label>Resignation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role_List__c</fullName>
        <label>Role List</label>
        <picklist>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr.Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Lead</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SKILLS__c</fullName>
        <description>This is skills Set</description>
        <inlineHelpText>This is skills Set</inlineHelpText>
        <label>SKILLS</label>
        <picklist>
            <picklistValues>
                <fullName>Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C#</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dot Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Salary_Credited_Till_Date__c</fullName>
        <label>Salary Credited Till Date</label>
        <summarizedField>Sa__c.Gross_Salary__c</summarizedField>
        <summaryForeignKey>Sa__c.Credited_To__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(( Is_Active__c = TRUE) , 

IMAGE( &quot;https://c.ap2.content.force.com/servlet/servlet.FileDownload?file=015280000022Iup&quot;, &quot;Green:IsActive&quot;,50,50), 

IF((Is_Active__c = TRUE &amp;&amp; Is_On_Notice_Period1__c = TRUE) , 

IMAGE( &quot;https://c.ap2.content.force.com/servlet/servlet.FileDownload?file=015280000022IvO&quot;, &quot;yellow:ActiveOnNotice&quot;,50,50), 

IF((Is_Active__c = FALSE) , 

IMAGE( &quot;https://c.ap2.content.force.com/servlet/servlet.FileDownload?file=015280000022IvJ&quot;, &quot;red:Defunct&quot;,50,50),null)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>EMPLOYEE</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Employees</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Date_of_Joining__c</columns>
        <columns>Last_Working_Day__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Employees</label>
        <sharedTo>
            <role>HR_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Employees_on_Notice_Period</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Date_of_Joining__c</columns>
        <columns>Last_Working_Day__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_On_Notice_Period1__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Employees on Notice Period</label>
        <sharedTo>
            <role>HR_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Inactive_Employees</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Date_of_Joining__c</columns>
        <columns>Last_Working_Day__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Inactive Employees</label>
        <sharedTo>
            <role>HR_Manager</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>EMPLOYEE Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EMPLOYEES</pluralLabel>
    <recordTypes>
        <fullName>Non_Technical1</fullName>
        <active>true</active>
        <description>This is Non technical</description>
        <label>Non-Technical1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical</fullName>
        <active>true</active>
        <label>Technical</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical1</fullName>
        <active>true</active>
        <description>this is technical</description>
        <label>Technical1</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Rule1</fullName>
        <active>false</active>
        <errorConditionFormula>ISNULL(Resignation_Date__c ) &amp;&amp;  Is_On_Notice_Period1__c = true</errorConditionFormula>
        <errorDisplayField>Resignation_Date__c</errorDisplayField>
        <errorMessage>Enter the date if Notice Period checked to true</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>last_working_date_mst_be_gt_joining_date</fullName>
        <active>false</active>
        <errorConditionFormula>Last_Working_Day__c &lt;=    Date_of_Joining__c</errorConditionFormula>
        <errorMessage>Last working date must be greater than joining date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>take_age_is_between_21_and_30</fullName>
        <active>false</active>
        <description>take_age_is_between_21_and_30</description>
        <errorConditionFormula>YEAR( TODAY() ) - YEAR( Date_of_Birth__c ) &lt;21 ||  YEAR( TODAY() ) -  YEAR( Date_of_Birth__c ) &gt;30</errorConditionFormula>
        <errorDisplayField>Date_of_Birth__c</errorDisplayField>
        <errorMessage>Please Enter valid age of range 21 to 30</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validation_rule_to_limit_size_to_10</fullName>
        <active>false</active>
        <description>validation rule to limit size to 10</description>
        <errorConditionFormula>SSN__c &gt;1000000000</errorConditionFormula>
        <errorMessage>Size is greater than 10 please enter number of having size 10</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>whnvr_resignation_date_is_changed</fullName>
        <active>false</active>
        <description>Whenever the employee resignation date is changed
 User should not be able to modify the details of the salary</description>
        <errorConditionFormula>ISCHANGED( Resignation_Date__c)</errorConditionFormula>
        <errorMessage>the employee resignation date is changed
 User should not be able to modify the details of the salary</errorMessage>
    </validationRules>
</CustomObject>